# ksecret

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  config.rs  lib.rs  main.rs
src/commands/: delete.rs  get.rs  init.rs  list.rs  mod.rs  set.rs  sync.rs
src/gcp/: client.rs  error.rs  mod.rs
src/k8s/: client.rs  error.rs  mod.rs
