[package]
name = "ksecret"
version = "0.1.0"
edition = "2021"
description = "Kubernetes secrets management tool with Google Cloud Secret Manager integration"
authors = ["Your Team"]
license = "MIT"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Google Cloud Secret Manager
google-cloud-secretmanager-v1 = "1.3"
google-cloud-auth = "0.18"

# Kubernetes client
kube = { version = "0.98", features = ["client", "runtime", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"

# Utilities
base64 = "0.22"
dirs = "5"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
